--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ img {
   <img src="https://avatars.githubusercontent.com/u/103161875?v=4" alt="Avatar" style="width:100%">
   <div class="container">
     <h4><b>Chutdanai Seemuang</b></h4> 
-    <p>Senior Programmer Analyst</p>
+    <p>Senior Programmer Analysts</p>
     <p>Internal Software Solution - AIS</p>
     <p><a href="mailto:chutdans@ais.co.th">chutdans@ais.co.th</a></p>
   </div>
